# rotor-smartter

./: CMakeLists.txt  changelog
conf/: smartter.ini
data/costmaps/: CMakeLists.txt  stjoan.graph  upc.graph
data/maps/: CMakeLists.txt
path-control/: CMakeLists.txt
path-control/src/: CMakeLists.txt
path-control/src/path-control/: ApplicationWindow.h  DispatchThread.cpp  DispatchThread.h  PathPlot.cpp  PathPlot.h  main.cpp
path-control/ui/: MainWindow.ui
path-follow/src/: CMakeLists.txt
path-follow/src/path-follow/: ArcController.cpp  ArcController.h  Vector.cpp  pathFollow.cpp
path-planner/: CMakeLists.txt
path-planner/scripts/: display_map
path-planner/src/pathPlanner/: CostMap-inline.h  CostMap.h  Pose-inline.h  Pose.cpp  Pose.h  PoseGraph.cpp  pathPlanner.cpp
pathFollow/: CMakeLists.txt
pathFollow/src/: CMakeLists.txt
pathFollow/src/pathFollow/: ArcController.cpp  ArcController.h  ArcSafety.cpp  ArcSafety.h  Types.h  Vector.cpp  Vector.h  pathFollow.cpp
pathPlanner/scripts/: build_map
pathPlanner/src/: CMakeLists.txt
pathPlanner/src/pathPlanner/: CostMap.cpp  PoseGraph.h  PosePlanner.cpp  PosePlanner.h  pathPlanner.cpp
python/lib/interface/: CMakeLists.txt  messages.py
smart-monitor/: CMakeLists.txt
smart-monitor/python/elrob_monitor/: __init__.py  elrob_monitor_ui.py  elrob_monitor_widgets.py
smart-monitor/python/smart_monitor/: messages.py  monitor.py
smart-monitor/scripts/: elrobMonitor
smart-monitor/src/: CMakeLists.txt
smart-monitor/src/smart-monitor/: ApplicationWindow.cpp  ApplicationWindow.h  Configuration.cpp  Configuration.h  ControlPlot.h  DispatchThread.cpp  DispatchThread.h  FrequencyPlot.cpp  FrequencyPlot.h  FrequencyPlotContainer.cpp  FrequencyPlotContainer.h  GyroPlot.cpp  GyroPlot.h  LocalizationPlot.cpp  LocalizationPlot.h  NavigationPlot.cpp  NavigationPlot.h  StatusPlot.cpp  StatusPlot.h  main.cpp
smart-monitor/ui/: MainWindow.ui  monitor_ui.ui
smart-rotor-interfaces/: CMakeLists.txt
smart-rotor-interfaces/python/smart_rotor_interfaces/: messages.py
smart-rotor-interfaces/src/: CMakeLists.txt
smart-rotor-interfaces/src/smart-rotor-interfaces/: Messages.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/arc-control/: ArcController.cpp
src/lib/control/: ArcSafety.cpp  CMakeLists.txt
src/lib/gui/path/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  DispatchThread.cpp  MainWindow.ui  PathPlot.cpp  PathPlot.h
src/lib/gui/smart/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  Configuration.cpp  Configuration.h  ControlPlot.cpp  DispatchThread.cpp  DispatchThread.h  FrequencyPlot.h  GyroPlot.h  LocalizationPlot.cpp  LocalizationPlot.h  MainWindow.ui  NavigationPlot.cpp  NavigationPlot.h  StatusPlot.h
src/lib/interface/: CMakeLists.txt  Messages.h
src/lib/planning/: AStar.h  AStar.tpp  CMakeLists.txt  CostMap-inline.h  CostMap.cpp  CostMap.h  Exceptions.cpp  Exceptions.h  Graph.h  Graph.tpp  Metrics.h  Metrics.tpp  Pose-inline.h  Pose.cpp  Pose.h  PoseGraph.cpp  PoseGraph.h  PosePlanner.cpp  PosePlanner.h  PriorityQueue.h  PriorityQueue.tpp
